tests/paczka1/small_fuzzy/50504430.err
Error in line 7: Wl2bLM A670 13,3
Error in line 13: LG527N6bb4 A552 14,9
Error in line 14: LG527N6bb4 A670 22,6
